--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@lunacrew/logger",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "Node.js logger with dynamic log levels",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "types": "src/index.d.ts",
   "files": [
     "/dist/src",
